*SVN*

* Highlight helper highlights one or many terms in a single pass.  [Jeremy Kemper]

* Dropped the use of ; as a separator of non-crud actions on resources and went back to the vanilla slash. It was a neat idea, but lots of the non-crud actions turned out not to be RPC (as the ; was primarily intended to discourage), but legitimate sub-resources, like /parties/recent, which didn't deserve the uglification of /parties;recent. Further more, the semicolon caused issues with caching and HTTP authentication in Safari. Just Not Worth It [DHH]

* Added that FormTagHelper#submit_tag will return to its original state if the submit fails and you're using :disable_with [DHH]

* Cleaned up, corrected, and mildly expanded ActionPack documentation.  Closes #7190 [jeremymcanally]

* Small collection of ActionController documentation cleanups.  Closes #7319 [jeremymcanally]

* Make sure the route expiry hash is constructed by comparing the to_param-ized values of each hash. [Jamis Buck]

* Allow configuration of the default action cache path for #caches_action calls.  [Rick Olson]

  class ListsController < ApplicationController
    caches_action :index, :cache_path => Proc.new { |controller| 
      controller.params[:user_id] ? 
        controller.send(:user_lists_url, c.params[:user_id]) :
        controller.send(:lists_url) }
  end

* Performance: patch cgi/session/pstore to require digest/md5 once rather than per #initialize.  #7583 [Stefan Kaes]

* Cookie session store: ensure that new sessions doesn't reuse data from a deleted session in the same request.  [Jeremy Kemper]

* Deprecation: verification with :redirect_to => :named_route shouldn't be deprecated.  #7525 [Justin French]

* Cookie session store: raise ArgumentError when :session_key is blank.  [Jeremy Kemper]
