@@ -1,0 +1,1 @@
+<test>passed formatted html erb</test>
