@@ -14,14 +14,22 @@ class ActionViewTemplateTest < Test::Unit::TestCase
       assert_equal :foo, @template.send(:find_template_extension_for, 'foo')
     end
     
+    def test_should_find_formatted_erb_extension
+      @template.expects(:delegate_template_exists?).with('foo').returns(nil)
+      @template.expects(:formatted_template_exists?).with('foo.html').returns("erb")
+      assert_equal "html.erb", @template.send(:find_template_extension_for, 'foo')
+    end
+    
     def test_should_find_erb_extension
       @template.expects(:delegate_template_exists?).with('foo').returns(nil)
+      @template.expects(:formatted_template_exists?).with('foo.html').returns(nil)
       @template.expects(:erb_template_exists?).with('foo').returns(:erb)
       assert_equal :erb, @template.send(:find_template_extension_for, 'foo')
     end
     
     def test_should_find_builder_extension
       @template.expects(:delegate_template_exists?).with('foo').returns(nil)
+      @template.expects(:formatted_template_exists?).with('foo.html').returns(nil)
       @template.expects(:erb_template_exists?).with('foo').returns(nil)
       @template.expects(:builder_template_exists?).with('foo').returns(:builder)
       assert_equal :builder, @template.send(:find_template_extension_for, 'foo')
@@ -29,6 +37,7 @@ class ActionViewTemplateTest < Test::Unit::TestCase
     
     def test_should_find_javascript_extension
       @template.expects(:delegate_template_exists?).with('foo').returns(nil)
+      @template.expects(:formatted_template_exists?).with('foo.html').returns(nil)
       @template.expects(:erb_template_exists?).with('foo').returns(nil)
       @template.expects(:builder_template_exists?).with('foo').returns(nil)
       @template.expects(:javascript_template_exists?).with('foo').returns(true)
